[package]
name = "bevy_mod_check_filter"
version = "0.1.1"
edition = "2021"
categories = ["game-engines"]
description = "A module for improved ergonomics with Enabled-style marker components."
keywords = ["bevy", "query", "filter", "component"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ItsDoot/bevy_mod_check_filter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_ecs = "0.8"
bevy_ptr = "0.8"