[package]
name = "bevy_mod_check_filter_macros"
version = "0.2.0"
edition = "2021"
categories = ["game-engines"]
description = "A module for improved ergonomics with Enabled-style marker components."
keywords = ["bevy", "query", "filter", "component"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ItsDoot/bevy_mod_check_filter"

[lib]
proc-macro = true

[dependencies]
syn = {version = "1.0", features = ["extra-traits"]}
quote = "1.0"
proc-macro2 = "1.0"
